Fix Carousel preview on small devices

--- a/BlogSystem/wwwroot/assets/css/style.css
+++ b/BlogSystem/wwwroot/assets/css/style.css
@@ -2190,6 +2190,12 @@ a:hover {
     height: 35px;
     font-size: 16px;
   }
+  .owl-theme .owl-nav .owl-prev {
+    left: 0;
+  }
+  .owl-theme .owl-nav .owl-next {
+    right: 0;
+  }
 }
 /* Hide navigation on very small screens */
 @media (max-width: 480px) {
