--- a/BlogSystem/wwwroot/assets/scss/blog/components/carousel.scss
+++ b/BlogSystem/wwwroot/assets/scss/blog/components/carousel.scss
@@ -87,6 +87,14 @@
                 height: 35px;
                 font-size: 16px;
             }
+
+            .owl-prev {
+                left: 0;
+            }
+
+            .owl-next {
+                right: 0;
+            }
         }
     }
 }
